# DistributedDeepMimic

./: RLConfig.py  main.py  main2.py
RLPython/: __init__.py  deepnetwork.py  distribution.py  model.py  policy.py  replaybuffer.py  statemodifier.py
RLPython/RLHelper/: CMakeLists.txt  RLHelper.cpp
bipedenv/: CMakeLists.txt  biped.py
bipedenv/Shader/: fragshader2.txt
bipedenv/cpp/: Parameter.cpp  api.cpp
bipedenv/cpp/Agents/: DefaultAgent.cpp  KinematicsPlayer.cpp  PhysicsAgent.cpp  PhysicsSPDAgent.cpp
bipedenv/cpp/Environment/: DeepMimic.cpp  DefaultEnvironment.cpp  EnvironmentHelper.cpp
bipedenv/cpp/Helper/: Functions.cpp  TimeProfiler.cpp
bipedenv/cpp/MotionDatabase/: MotionDB.cpp  MotionHelper.cpp  MotionStatus.cpp  SkeletonBuilder.cpp
bipedenv/cpp/Render/: Camera3D.cpp  DART_interface.cpp  Drawable.cpp  GLFWMain.cpp  GLfunctions.cpp  MyGLFWwindow.cpp  Shader.cpp
bipedenv/include/: Parameter.h  api.h
bipedenv/include/Agents/: Agents.h  DefaultAgent.h  KinematicsPlayer.h  PhysicsAgent.h  PhysicsSPDAgent.h
bipedenv/include/Environment/: DeepMimic.h  DefaultEnvironment.h  Environment.h  EnvironmentHelper.h
bipedenv/include/Helper/: Functions.h  TimeProfiler.h
bipedenv/include/MotionDatabase/: MotionDB.h  MotionHelper.h  MotionStatus.h  SkeletonBuilder.h
bipedenv/include/Render/: Camera3D.h  DART_interface.h  Drawable.h  GLFWMain.h  GLfunctions.h  MyGLFWwindow.h  Render.h  Shader.h
resources/: metaData.xml
resources/DeepMimic/: DeepMimic_parameter.xml  humanoid.xml  run_clip.bvh
resources/DeepMimic2/: DeepMimic_parameter.xml  humanoid.xml
results/PPO_DeepMimic_1/checkpoint_2530/: checkpoint-2530  checkpoint-2530.tune_metadata
results/PPO_DeepMimic_1_log/: params.json  params.pkl
